--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -8,11 +8,17 @@
 </ion-header>
 
 <ion-content padding>
-  <h3>Ionic Menu Starter</h3>
+  <h3>Ionic Menu Starter {{app.name}} {{app.version}}</h3>
 
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will show you the way.
-  </p>
+  <ion-item>
+    <ion-label floating>app.name</ion-label>
+    <ion-input [(ngModel)]="app.name" type="text"></ion-input>
+  </ion-item>
 
-  <button ion-button secondary menuToggle>Toggle Menu</button>
+  <ion-item>
+    <ion-label floating>app.version</ion-label>
+    <ion-input [(ngModel)]="app.version" type="number"></ion-input>
+  </ion-item>
+
+  <button ion-button menuToggle margin-top>Toggle Menu</button>
 </ion-content>
