--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -13,8 +13,8 @@
     Let me take a selfie !
     <ion-icon name="musical-note" margin-left></ion-icon>
   </button>
-  <button *ngIf="base64Image" ion-button (click)="saveInGallery()">Sauvegarde ce chef d'oeuvre !</button> <br>
-  res : {{res}} <br>
-  err : {{err}} <br>
+
+  <button *ngIf="base64Image" ion-button (click)="saveInGallery()">Sauvegarder ce chef d'oeuvre</button> <br>
+
   <img *ngIf="base64Image" [src]="base64Image"/>
 </ion-content>
