Save in Gallery

--- a/src/pages/camera/camera.html
+++ b/src/pages/camera/camera.html
@@ -15,6 +15,6 @@
   </button>
 
   <button *ngIf="base64Image" ion-button (click)="saveInGallery()">Sauvegarder ce chef d'oeuvre</button> <br>
-
+  <p *ngIf="message">{{message}}</p>
   <img *ngIf="base64Image" [src]="base64Image"/>
 </ion-content>
